--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/api/index.py"
+        "dest": "GUI_Based_python_app.py"
       }
     ]
   }
